// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`StatusBar notifies of update with appropriate color when 2 days old 1`] = `
<div
  className="Statusbar"
>
  <section
    className="Statusbar-panel Statusbar-errWarnPanel"
  >
    <div
      className="Statusbar-errWarnPanel-child"
    >
      <svg
        className="Statusbar-errWarnPanel-icon "
      >
        error.svg
      </svg>
      <p>
        <span
          className="Statusbar-errWarnPanel-count Statusbar-errWarnPanel-count--error"
        >
          0
        </span>
         
        <a
          href="/errors"
          onClick={[Function]}
        >
          error
          s
        </a>
      </p>
    </div>
    <div
      className="Statusbar-errWarnPanel-child"
    >
      <svg
        className="Statusbar-errWarnPanel-icon "
      >
        warning.svg
      </svg>
      <p>
        <span
          className="Statusbar-errWarnPanel-count"
        >
          0
        </span>
         
        warning
        s
      </p>
    </div>
  </section>
  <section
    className="Statusbar-panel Statusbar-statusMsgPanel"
  >
    <p
      className="Statusbar-statusMsgPanel-child"
    >
      
    </p>
    <p
      className="Statusbar-statusMsgPanel-child Statusbar-statusMsgPanel-child--lastEdit"
    >
      <span
        className="Statusbar-statusMsgPanel-label"
      >
        Last Edit:
      </span>
      <span>
        —
      </span>
    </p>
  </section>
  <section
    className="Statusbar-panel Statusbar-progressPanel"
  >
    <p>
      <strong>
        0
      </strong>
      /
      0
       running
    </p>
    <svg
      className="Statusbar-logo"
    >
      logo.svg
    </svg>
  </section>
  <section
    className="Statusbar-updatePanel"
  >
    <a
      href="https://docs.tilt.dev/upgrade.html"
      target="_blank"
    >
      <svg
        className="Statusbar-updatePanel-icon Statusbar-updatePanel-outofdate-short"
        height="24"
        viewBox="0 0 100 100"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <title>
          Tilt Version 
          v0.10.0
           Available
        </title>
        <circle
          cx="50"
          cy="50"
          r="50"
        />
        <path
          d="M 35 80 V 55 H 15 L 50 15 L 85 55 H 65 V 80"
          fill="white"
        />
      </svg>
    </a>
  </section>
</div>
`;

exports[`StatusBar notifies of update with appropriate color when 6 days old 1`] = `
<div
  className="Statusbar"
>
  <section
    className="Statusbar-panel Statusbar-errWarnPanel"
  >
    <div
      className="Statusbar-errWarnPanel-child"
    >
      <svg
        className="Statusbar-errWarnPanel-icon "
      >
        error.svg
      </svg>
      <p>
        <span
          className="Statusbar-errWarnPanel-count Statusbar-errWarnPanel-count--error"
        >
          0
        </span>
         
        <a
          href="/errors"
          onClick={[Function]}
        >
          error
          s
        </a>
      </p>
    </div>
    <div
      className="Statusbar-errWarnPanel-child"
    >
      <svg
        className="Statusbar-errWarnPanel-icon "
      >
        warning.svg
      </svg>
      <p>
        <span
          className="Statusbar-errWarnPanel-count"
        >
          0
        </span>
         
        warning
        s
      </p>
    </div>
  </section>
  <section
    className="Statusbar-panel Statusbar-statusMsgPanel"
  >
    <p
      className="Statusbar-statusMsgPanel-child"
    >
      
    </p>
    <p
      className="Statusbar-statusMsgPanel-child Statusbar-statusMsgPanel-child--lastEdit"
    >
      <span
        className="Statusbar-statusMsgPanel-label"
      >
        Last Edit:
      </span>
      <span>
        —
      </span>
    </p>
  </section>
  <section
    className="Statusbar-panel Statusbar-progressPanel"
  >
    <p>
      <strong>
        0
      </strong>
      /
      0
       running
    </p>
    <svg
      className="Statusbar-logo"
    >
      logo.svg
    </svg>
  </section>
  <section
    className="Statusbar-updatePanel"
  >
    <a
      href="https://docs.tilt.dev/upgrade.html"
      target="_blank"
    >
      <svg
        className="Statusbar-updatePanel-icon Statusbar-updatePanel-outofdate-medium"
        height="24"
        viewBox="0 0 100 100"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <title>
          Tilt Version 
          v0.10.0
           Available
        </title>
        <circle
          cx="50"
          cy="50"
          r="50"
        />
        <path
          d="M 35 80 V 55 H 15 L 50 15 L 85 55 H 65 V 80"
          fill="white"
        />
      </svg>
    </a>
  </section>
</div>
`;

exports[`StatusBar notifies of update with appropriate color when 10 days old 1`] = `
<div
  className="Statusbar"
>
  <section
    className="Statusbar-panel Statusbar-errWarnPanel"
  >
    <div
      className="Statusbar-errWarnPanel-child"
    >
      <svg
        className="Statusbar-errWarnPanel-icon "
      >
        error.svg
      </svg>
      <p>
        <span
          className="Statusbar-errWarnPanel-count Statusbar-errWarnPanel-count--error"
        >
          0
        </span>
         
        <a
          href="/errors"
          onClick={[Function]}
        >
          error
          s
        </a>
      </p>
    </div>
    <div
      className="Statusbar-errWarnPanel-child"
    >
      <svg
        className="Statusbar-errWarnPanel-icon "
      >
        warning.svg
      </svg>
      <p>
        <span
          className="Statusbar-errWarnPanel-count"
        >
          0
        </span>
         
        warning
        s
      </p>
    </div>
  </section>
  <section
    className="Statusbar-panel Statusbar-statusMsgPanel"
  >
    <p
      className="Statusbar-statusMsgPanel-child"
    >
      
    </p>
    <p
      className="Statusbar-statusMsgPanel-child Statusbar-statusMsgPanel-child--lastEdit"
    >
      <span
        className="Statusbar-statusMsgPanel-label"
      >
        Last Edit:
      </span>
      <span>
        —
      </span>
    </p>
  </section>
  <section
    className="Statusbar-panel Statusbar-progressPanel"
  >
    <p>
      <strong>
        0
      </strong>
      /
      0
       running
    </p>
    <svg
      className="Statusbar-logo"
    >
      logo.svg
    </svg>
  </section>
  <section
    className="Statusbar-updatePanel"
  >
    <a
      href="https://docs.tilt.dev/upgrade.html"
      target="_blank"
    >
      <svg
        className="Statusbar-updatePanel-icon Statusbar-updatePanel-outofdate-long"
        height="24"
        viewBox="0 0 100 100"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <title>
          Tilt Version 
          v0.10.0
           Available
        </title>
        <circle
          cx="50"
          cy="50"
          r="50"
        />
        <path
          d="M 35 80 V 55 H 15 L 50 15 L 85 55 H 65 V 80"
          fill="white"
        />
      </svg>
    </a>
  </section>
</div>
`;

exports[`StatusBar renders two items all ok snapshot 1`] = `
<div
  className="Statusbar"
>
  <section
    className="Statusbar-panel Statusbar-errWarnPanel"
  >
    <div
      className="Statusbar-errWarnPanel-child"
    >
      <svg
        className="Statusbar-errWarnPanel-icon "
      >
        error.svg
      </svg>
      <p>
        <span
          className="Statusbar-errWarnPanel-count Statusbar-errWarnPanel-count--error"
        >
          0
        </span>
         
        <a
          href="/errors"
          onClick={[Function]}
        >
          error
          s
        </a>
      </p>
    </div>
    <div
      className="Statusbar-errWarnPanel-child"
    >
      <svg
        className="Statusbar-errWarnPanel-icon "
      >
        warning.svg
      </svg>
      <p>
        <span
          className="Statusbar-errWarnPanel-count"
        >
          0
        </span>
         
        warning
        s
      </p>
    </div>
  </section>
  <section
    className="Statusbar-panel Statusbar-statusMsgPanel"
  >
    <p
      className="Statusbar-statusMsgPanel-child"
    >
      
    </p>
    <p
      className="Statusbar-statusMsgPanel-child Statusbar-statusMsgPanel-child--lastEdit"
    >
      <span
        className="Statusbar-statusMsgPanel-label"
      >
        Last Edit:
      </span>
      <span>
        vigoda ‣ main.go[+1 more]
      </span>
    </p>
  </section>
  <section
    className="Statusbar-panel Statusbar-progressPanel"
  >
    <p>
      <strong>
        2
      </strong>
      /
      2
       running
    </p>
    <svg
      className="Statusbar-logo"
    >
      logo.svg
    </svg>
  </section>
</div>
`;

exports[`StatusBar renders two items both errors snapshot 1`] = `
<div
  className="Statusbar"
>
  <section
    className="Statusbar-panel Statusbar-errWarnPanel"
  >
    <div
      className="Statusbar-errWarnPanel-child"
    >
      <svg
        className="Statusbar-errWarnPanel-icon Statusbar-errWarnPanel-icon--error"
      >
        error.svg
      </svg>
      <p>
        <span
          className="Statusbar-errWarnPanel-count Statusbar-errWarnPanel-count--error"
        >
          2
        </span>
         
        <a
          href="/errors"
          onClick={[Function]}
        >
          error
          s
        </a>
      </p>
    </div>
    <div
      className="Statusbar-errWarnPanel-child"
    >
      <svg
        className="Statusbar-errWarnPanel-icon "
      >
        warning.svg
      </svg>
      <p>
        <span
          className="Statusbar-errWarnPanel-count"
        >
          0
        </span>
         
        warning
        s
      </p>
    </div>
  </section>
  <section
    className="Statusbar-panel Statusbar-statusMsgPanel"
  >
    <p
      className="Statusbar-statusMsgPanel-child"
    >
      Build failed: vigoda
    </p>
    <p
      className="Statusbar-statusMsgPanel-child Statusbar-statusMsgPanel-child--lastEdit"
    >
      <span
        className="Statusbar-statusMsgPanel-label"
      >
        Last Edit:
      </span>
      <span>
        vigoda ‣ main.go[+1 more]
      </span>
    </p>
  </section>
  <section
    className="Statusbar-panel Statusbar-progressPanel"
  >
    <p>
      <strong>
        0
      </strong>
      /
      2
       running
    </p>
    <svg
      className="Statusbar-logo"
    >
      logo.svg
    </svg>
  </section>
</div>
`;

exports[`StatusBar renders without crashing 1`] = `
<div
  className="Statusbar"
>
  <section
    className="Statusbar-panel Statusbar-errWarnPanel"
  >
    <div
      className="Statusbar-errWarnPanel-child"
    >
      <svg
        className="Statusbar-errWarnPanel-icon "
      >
        error.svg
      </svg>
      <p>
        <span
          className="Statusbar-errWarnPanel-count Statusbar-errWarnPanel-count--error"
        >
          0
        </span>
         
        <a
          href="/errors"
          onClick={[Function]}
        >
          error
          s
        </a>
      </p>
    </div>
    <div
      className="Statusbar-errWarnPanel-child"
    >
      <svg
        className="Statusbar-errWarnPanel-icon "
      >
        warning.svg
      </svg>
      <p>
        <span
          className="Statusbar-errWarnPanel-count"
        >
          0
        </span>
         
        warning
        s
      </p>
    </div>
  </section>
  <section
    className="Statusbar-panel Statusbar-statusMsgPanel"
  >
    <p
      className="Statusbar-statusMsgPanel-child"
    >
      
    </p>
    <p
      className="Statusbar-statusMsgPanel-child Statusbar-statusMsgPanel-child--lastEdit"
    >
      <span
        className="Statusbar-statusMsgPanel-label"
      >
        Last Edit:
      </span>
      <span>
        —
      </span>
    </p>
  </section>
  <section
    className="Statusbar-panel Statusbar-progressPanel"
  >
    <p>
      <strong>
        0
      </strong>
      /
      0
       running
    </p>
    <svg
      className="Statusbar-logo"
    >
      logo.svg
    </svg>
  </section>
</div>
`;
